# libminimal_window

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: lib.h  lib_window.h
src/: lib.cpp  lib_window.cpp
test/: CMakeLists.txt  main.cpp
